# ecen330_gc

./: .gitignore  Doxyfile  LICENSE.md  README.md  check_and_zip.py  myidf.sh
audio/: audio2c.m  audio2ci.m  plot_spectrum.m  plot_time.m
components/config/: hw.h  hw_gc.h  hw_ltag.h  hw_ltag_d.h
components/cursor/: CMakeLists.txt  cursor.c  cursor.h
components/joy/: CMakeLists.txt  joy.h
components/lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd.html
components/net/: net.c
components/pin/: CMakeLists.txt  pin.h  pin_template.c
components/sound/: CMakeLists.txt  sound.h  sound_cont.c  sound_one.c
components/tone/: CMakeLists.txt  tone.h
diag/: CMakeLists.txt  sdkconfig.defaults
diag/main/: CMakeLists.txt  main.c
image/: image2c_mono.m  image2c_rgb.m
lab01/: CMakeLists.txt
lab01/main/: CMakeLists.txt  main_template.c
lab02/: CMakeLists.txt
lab02/main/: CMakeLists.txt  main.c  pin_test.c  pin_test.h
lab03/: CMakeLists.txt
lab03/main/: CMakeLists.txt  watch.c  watch.h
lab04/: CMakeLists.txt
lab04/main/: CMakeLists.txt  main.c
lab05/: CMakeLists.txt
lab05/main/: CMakeLists.txt  board.c  board.h  com.h  config.h  game.h  graphics.c  graphics.h  main.c  nav.c  nav.h
lab06/: CMakeLists.txt  sdkconfig.defaults
lab06/main/: CMakeLists.txt  config.h  game.h  gameControl.h  gameControl_template.c  game_template.c  main.c  missile.h  plane.h
lab07/: CMakeLists.txt
lab07/main/: CMakeLists.txt  main.c
lcd_test/: CMakeLists.txt
lcd_test/main/: CMakeLists.txt  (+4 more)
retro/: prog.bat  prog.sh  retro-go_1.38.1c_stem-con.img
test_lcd/: CMakeLists.txt
(+37 files in other folders)
